# pgvector-python

./: .gitignore  CHANGELOG.md  LICENSE.txt  Makefile  README.md  logfile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
doc/: python3-pgvector.1
examples/: bulk_loading.py  citus.py  colbert_exact.py  hash_image_search.py  hybrid_search.py  hybrid_search_rrf.py  implicit_recs.py  lightfm_recs.py  openai_embeddings.py  pytorch_image_search.py  requirements.txt  sentence_embeddings.py  simple_sqlmodel_vector.py  sparse_search.py  surprise_recs.py  topic_modeling.py
examples/benchmark/: README.md  load_embeddings.py  search_embeddings.py
examples/citus/: pyproject.toml
examples/cohere/: example.py  pyproject.toml  requirements.txt
examples/colbert/: approximate.py  exact.py  exact_binary.py  pyproject.toml  requirements.txt
examples/colpali/: exact.py  pyproject.toml  requirements.txt
examples/gemini/: example.py  requirements.txt
examples/gensim/: example.py  pyproject.toml  requirements.txt
examples/hybrid_search/: cross_encoder.py
examples/image_search/: example.py  pyproject.toml  requirements.txt
examples/imagehash/: example.py  pyproject.toml  requirements.txt
examples/implicit/: example.py  pyproject.toml  requirements.txt
examples/lightfm/: example.py  pyproject.toml  requirements.txt
examples/loading/: example.py  pyproject.toml  requirements.txt
examples/openai/: example.py  halfvec.py  pyproject.toml  requirements.txt
examples/rag/: example.py  pyproject.toml  requirements.txt
examples/rdkit/: example.py  pyproject.toml  requirements.txt
examples/sentence_transformers/: example.py  pyproject.toml  requirements.txt
examples/sparse_search/: example.py  pyproject.toml  requirements.txt
examples/surprise/: example.py  pyproject.toml  requirements.txt
pgvector/: bit.py  halfvec.py  sparsevec.py  vector.py
pgvector/asyncpg/: __init__.py  register.py
pgvector/django/: __init__.py  bit.py  extensions.py  forms.py  functions.py  halfvec.py  indexes.py  sparsevec.py  vector.py  widgets.py
pgvector/peewee/: __init__.py  bit.py  halfvec.py  sparsevec.py  vector.py
pgvector/pg8000/: register.py
pgvector/psycopg/: __init__.py  bit.py  halfvec.py  register.py  sparsevec.py  vector.py
pgvector/psycopg2/: __init__.py  bit.py  halfvec.py  register.py  sparsevec.py  vector.py
pgvector/psycopg3/: __init__.py
pgvector/sqlalchemy/: __init__.py  bit.py  functions.py  halfvec.py  sparsevec.py  vector.py
pgvector/tortoise/: __init__.py  functions.py  vector.py
pgvector/utils/: __init__.py  bit.py  halfvec.py  sparsevec.py  vector.py
tests/: test_asyncpg.py  test_bit.py  test_django.py  test_half_vector.py  test_halfvec.py  test_peewee.py  test_pg8000.py  test_psycopg.py  test_psycopg2.py  test_psycopg3.py  test_psycopg_async.py  test_sparse_vector.py  test_sparsevec.py  test_sqlalchemy.py  test_sqlmodel.py  test_vector.py
tests/test_tortoise/: test_tortoise.py
tests/test_tortoise/models/: __init__.py  app_models.py
