[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pgvector"
version = "0.4.2"
description = "pgvector support for Python"
readme = "README.md"
authors = [
    {name = "Andrew Kane", email = "andrew@ankane.org"}
]
license = "MIT"
requires-python = ">= 3.9"
dependencies = [
    "numpy"
]

[project.urls]
Homepage = "https://github.com/pgvector/pgvector-python"

[dependency-groups]
dev = [
    "asyncpg",
    "Django",
    "peewee",
    "pg8000",
    "psycopg[binary,pool]",
    "psycopg2-binary",
    "pytest",
    "pytest-asyncio",
    "scipy",
    "SQLAlchemy[asyncio]>=2",
    "sqlmodel>=0.0.12"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
